--- a/Abschlussaufgabe/Stylesheet.css
+++ b/Abschlussaufgabe/Stylesheet.css
@@ -11,51 +11,141 @@ Er wurde nicht kopiert und auch nicht diktiert.
 
 canvas {
 	
-	width: 50%;
+	width: 100%;
 	height: auto;
 }
 
 #Columbia {
 	position: absolute;
-	top: 7.2vw;
-	left: 2vw;
-	width: 14%;
-	height: 10.5vw;
+	top: 40vw;
+	left: 5vw;
+	width: 23%;
+	height: 17vw;
 	float: left;
 }
 
 #CostaRica {
 	position: absolute;
-	top: 34.9vw;
-	left: 2vw;
-	width: 14%;
-	height: 10.5vw;
+	top: 86.9vw;
+	left: 5vw;
+	width: 23%;
+	height: 17vw;
 	float: left;
 }
 
 #Gambia {
 	position: absolute;
-	top: 34.9vw;
-	left: 40.2vw;
-	width: 14%;
-	height: 10.5vw;
+	top: 86.9vw;
+	left: 70.2vw;
+	width: 23%;
+	height: 17vw;
 	float: left;
 }
 
 #Japan {
 	position: absolute;
-	top: 7.2vw;
-	left: 40.2vw;
-	width: 14%;
-	height: 10.5vw;
+	top: 40vw;
+	left: 70.2vw;
+	width: 23%;
+	height: 17vw;
 	float: left;
 }
 
 #Germany {
 	position: absolute;
-	top: 21vw;
-	left: 21.1vw;
-	width: 14%;
-	height: 10.5vw;
+	top: 63vw;
+	left: 38.1vw;
+	width: 23%;
+	height: 17vw;
 	float: left;
+}
+
+
+/*----------------Tablet-----------------*/
+/*@media screen and (min-width:48em) {
+	
+	canvas {
+			width: 60%;
+			}
+			
+	#Japan {
+			top: 7.5vw;
+			left: 43.2vw;
+			width: 14.5%;
+			height: 10.9vw;
+			}	
+	#Germany {
+			top: 22.2vw;
+			left: 22.8vw;
+			width: 14.5%;
+			height: 10.9vw;
+	}	
+	
+	#Columbia {
+			top: 7.5vw;
+			left: 2.4vw;
+			width: 14.5%;
+			height: 10.9vw;
+	}	
+	
+	#CostaRica {
+			top: 37vw;
+			left: 2.4vw;
+			width: 14.5%;
+			height: 10.9vw;
+	}	
+	
+	#Gambia {
+			top: 37vw;
+			left: 43.2vw;
+			width: 14.5%;
+			height: 10.9vw;
+	}	
+			
+}
+
+
+*/
+
+/*----------------Desktop-----------------*/
+@media screen and (min-width:64em) {
+	
+	canvas {
+			width: 60%;
+			}
+			
+	#Japan {
+			top: 7.5vw;
+			left: 43.2vw;
+			width: 14.5%;
+			height: 10.9vw;
+			}	
+	#Germany {
+			top: 22.2vw;
+			left: 22.8vw;
+			width: 14.5%;
+			height: 10.9vw;
+	}	
+	
+	#Columbia {
+			top: 7.5vw;
+			left: 2.4vw;
+			width: 14.5%;
+			height: 10.9vw;
+	}	
+	
+	#CostaRica {
+			top: 37vw;
+			left: 2.4vw;
+			width: 14.5%;
+			height: 10.9vw;
+	}	
+	
+	#Gambia {
+			top: 37vw;
+			left: 43.2vw;
+			width: 14.5%;
+			height: 10.9vw;
+	}	
+			
 }
