--- a/Abschlussaufgabe/Stylesheet.css
+++ b/Abschlussaufgabe/Stylesheet.css
@@ -2,7 +2,7 @@
 Aufgabe: Abschlussaufgabe
 Name: Lorena Eberhart
 Matrikel: 256328
-Datum: 13.10.17
+Datum: 23.02.18
 	
 Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. 
 Er wurde nicht kopiert und auch nicht diktiert.
@@ -13,6 +13,18 @@ canvas {
 	
 	width: 100%;
 	height: auto;
+}
+
+
+h1 {
+	font-family: 'Amatic SC', cursive;
+	font-size: 40px;
+}
+
+h3 {
+	font-family: 'Kavivanar', cursive;
+	margin: 0;
+	
 }
 
 #Columbia {
